--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <title>Drum Kit</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
-</head>
+
+  <script src="https://kit.fontawesome.com/ab91a62d44.js" crossorigin="anonymous"></script></head>
 
 <body>
 
@@ -48,5 +49,10 @@
   </footer>
   <script src="index.js" charset="utf-8"></scriptsrc></script>
 </body>
+
+<div class="icon">
+  <a class="footer-link" href="https://github.com/wipaweenan"><i class="icon fa-brands fa-github fa-3x" ></i></a>
+
+</div>
 
 </html>
